@@ -9,9 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.mainClass>edu.ntnu.idatt1002.k2g10.App</project.mainClass>
+        <maven.compiler.release>11</maven.compiler.release>
+        <project.mainClass>edu.ntnu.idatt1002.k2g10.todolistapp.App</project.mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>15.0.1</javafx.version>
     </properties>
@@ -62,10 +61,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <release>${maven.compiler.release}</release>
                 </configuration>
             </plugin>
 
@@ -82,7 +80,11 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.5</version>
                 <configuration>
+                    <release>${maven.compiler.release}</release>
                     <mainClass>${project.mainClass}</mainClass>
+                    <jlinkImageName>TodoListApp</jlinkImageName>
+                    <launcher>launcher</launcher>
+                    <options>--add-opens java.base/java.lang.reflect=com.jfoenix</options>
                 </configuration>
             </plugin>
 
